Fixed layout bug with non-wrapping texts.

--- a/chrome/skin/overlay.css
+++ b/chrome/skin/overlay.css
@@ -132,6 +132,12 @@
   font-size: 12px;
 }
 
+#glome-ad-description-value
+{
+  font-weight: normal !important;
+  text-transform: none !important;
+}
+
 #glome-controls-window .glome-ad-summary
 {
   width: 50px;
